# dotfiles

./: .Rprofile  .bash_profile  .bash_profile_linux  .bash_profile_mac  .bash_profile_pi  .bash_profile_torg  .bashrc  .builders.zsh  .functions.zsh  .gitignore  .hyper.js  .project.xsh  .spacemacs  .travis.yml  .vimrc  .zshrc  Dockerfile  Makefile.include  Makefile.linux  Makefile.mac  README.md  Vagrantfile  alpine.Dockerfile  alpine.sh  crc.md  deploy.py  fedora.Dockerfile  index.md  install.py  install.sh  install.xsh  install.yml  playbook.yml  pyproject.toml  requirements.txt  zsh.md
.config/fish/: config.fish
.config/nvim/: get_bundles.sh  init.vim
.doom.d/: config.el  init.el
.emacs.d/: init.el
autostart/: flux.sh
rc/: .xonshrc  .zshrc
rc/.config/nvim/: init.vim
rc/kitty/: argonaut.conf  gruvbox_dark.conf  kitty.conf  sketch.conf
rc/rofi/: config.rasi
rc/zellij/: config.yaml
roles/backup/files/: .kopiaignore  .stignore  rsync_backup.sh
roles/backup/tasks/: kopia-fedora.yaml  kopia.yaml  main.yml
roles/cli/tasks/: main.yml  navi.yaml
roles/comms/tasks/: irc.yaml  main.yml
roles/config/files/: userstyle.css
roles/config/tasks/: general-mac.yaml  main.yml  (+1 more)
roles/neovim/: main.yml
roles/spacemacs/: main.yml
st3/: NimLime.sublime-settings  Preferences.sublime-settings
stow/zsh/: .aliasrc  .functions.zsh  .zshrc
templates/: .bash_profile.j2  .stignore.j2  .vimrc  .zshrc.j2  hosts.j2  kitty.j2  syncthing.service.j2  vscode_settings.j2
tests/: mac.zunit  universal.zsh
theia/java/: latest.package.json  next.package.json
(+82 files in other folders)
