[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = ""
authors = ["Rui Vieira <ruidevieira@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyinfra = "^1.2"
cffi = "^1.14.3"
cryptography = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
